crates/dag-macros/tests/ui/workflow_switch_empty_cases.stderr
error: switch! requires at least one case
  --> tests/ui/workflow_switch_empty_cases.rs:36:5
   |
36 |     switch!(
   |     ^^^^^^
